--- a/package.json
+++ b/package.json
@@ -1,33 +1,54 @@
 {
-  "name": "telegram-intelligence-scraper",
-  "version": "1.0.0",
-  "description": "Advanced Telegram Intelligence Scraper - Recherche exhaustive et analyse IA pour Telegram",
-  "main": "backend/server.js",
+  "name": "full-osint-framework",
+  "version": "2.0.0",
+  "description": "Framework OSINT modulaire complet - Intelligence gathering et analyse multi-sources",
+  "main": "app.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "start:gateway": "node core/api/gateway.js",
+    "start:telegram": "node services/telegram/index.js",
     "test": "jest",
-    "lint": "eslint backend/ --ext .js",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .js --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .js --fix --ignore-path .gitignore",
     "setup": "node scripts/setup.js",
-    "check-apis": "node scripts/check-apis.js",
-    "docker:build": "docker build -t telegram-scraper .",
+    "check-config": "node scripts/check-config.js",
+    "check-services": "node scripts/check-services.js",
+    "docker:build": "docker build -t full-osint-framework .",
     "docker:run": "docker-compose up -d",
     "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "install:all": "npm install && npm run install:frontend",
     "install:frontend": "cd frontend && npm install",
     "build:frontend": "cd frontend && npm run build",
-    "clean": "rm -rf node_modules && npm install"
+    "dev:frontend": "cd frontend && npm run dev",
+    "clean": "rm -rf node_modules && npm install",
+    "clean:all": "npm run clean && cd frontend && rm -rf node_modules && npm install",
+    "logs": "tail -f logs/combined.log",
+    "logs:error": "tail -f logs/error.log",
+    "health": "curl -s http://localhost:3000/health | jq",
+    "services": "curl -s http://localhost:3000/info | jq",
+    "backup": "node scripts/backup.js",
+    "migrate": "node scripts/migrate.js"
   },
   "keywords": [
-    "telegram",
-    "scraper",
-    "intelligence",
     "osint",
+    "intelligence",
+    "investigation",
+    "telegram",
+    "social-media",
+    "web-intelligence",
+    "framework",
+    "microservices",
     "api",
     "search",
-    "social-media",
-    "automation"
+    "analysis",
+    "automation",
+    "security",
+    "reconnaissance"
   ],
-  "author": "Telegram Intelligence Team",
+  "author": "OSINT Framework Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.10.0",
@@ -60,7 +81,8 @@
     "eslint-plugin-import": "^2.29.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "concurrently": "^8.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -68,10 +90,85 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/telegram-intelligence-scraper.git"
+    "url": "https://github.com/your-username/full-osint-framework.git"
   },
   "bugs": {
-    "url": "https://github.com/your-username/telegram-intelligence-scraper/issues"
+    "url": "https://github.com/your-username/full-osint-framework/issues"
   },
-  "homepage": "https://github.com/your-username/telegram-intelligence-scraper#readme"
+  "homepage": "https://github.com/your-username/full-osint-framework#readme",
+  "config": {
+    "framework": {
+      "version": "2.0.0",
+      "services": {
+        "telegram": {
+          "enabled": true,
+          "required": false
+        },
+        "socialMedia": {
+          "enabled": false,
+          "required": false
+        },
+        "webIntel": {
+          "enabled": false,
+          "required": false
+        },
+        "imageIntel": {
+          "enabled": false,
+          "required": false
+        }
+      }
+    }
+  },
+  "nodemonConfig": {
+    "watch": [
+      "app.js",
+      "core/",
+      "services/",
+      "orchestrator/"
+    ],
+    "ext": "js,json",
+    "ignore": [
+      "logs/",
+      "node_modules/",
+      "frontend/",
+      "*.test.js"
+    ],
+    "env": {
+      "NODE_ENV": "development"
+    }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "core/**/*.js",
+      "services/**/*.js",
+      "orchestrator/**/*.js",
+      "!**/node_modules/**",
+      "!**/logs/**"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.js",
+      "**/?(*.)+(spec|test).js"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "airbnb-base"
+    ],
+    "env": {
+      "node": true,
+      "es2022": true,
+      "jest": true
+    },
+    "rules": {
+      "no-console": "off",
+      "consistent-return": "off",
+      "no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
+    }
+  }
 }
